EveryBot-master/build/tmp/compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp/output.txt
See file:///C:/frc/FRC%20code/FRC_Lil_timmy/EveryBot-master/build/tmp/compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp.
compiling Robot.cpp failed.
C:\frc\FRC code\FRC_Lil_timmy\EveryBot-master\src\main\cpp\Robot.cpp:20:7: error: stray '`' in program
  std::` << "-- CJ Robot Program Start --" << std::endl;
       ^
C:\frc\FRC code\FRC_Lil_timmy\EveryBot-master\src\main\cpp\Robot.cpp: In member function 'virtual void Robot::RobotInit()':
C:\frc\FRC code\FRC_Lil_timmy\EveryBot-master\src\main\cpp\Robot.cpp:20:9: error: expected unqualified-id before '<<' token
  std::` << "-- CJ Robot Program Start --" << std::endl;
         ^~

Finished compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp, see full log file:///C:/frc/FRC%20code/FRC_Lil_timmy/EveryBot-master/build/tmp/compileFrcUserProgramLinuxathenaDebugExecutableFrcUserProgramCpp/output.txt.
